# zookeeper-cpp

./: .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.rst  Client-example.html  README.md  README.rst  README_8md_source.html  _2home_2travis_2build_2tgockel_2zookeeper-cpp_2src_2zk_2server_2detail_2pipe_8hpp-example.html  _2home_2travis_2projects_2opensource_2zookeeper-cpp_2src_2zk_2server_2detail_2pipe_8hpp-example.html  acl_8cpp_source.html  acl_8hpp_source.html  annotated.html  annotated.js  annotated_dup.js  buffer_8hpp.html  buffer_8hpp.js  buffer_8hpp_source.html  classes.html  classpath_8cpp_source.html  classpath_8hpp_source.html  classstd_1_1hash_3_01zk_1_1acl__rule_01_4-members.html  classstd_1_1hash_3_01zk_1_1acl__rule_01_4.html  classzk_1_1acl-members.html  classzk_1_1acl.html  classzk_1_1acl.js  classzk_1_1acl__rule-members.html  classzk_1_1acl__rule.html  classzk_1_1acls-members.html  classzk_1_1acls.html  classzk_1_1api__error-members.html  classzk_1_1api__error.html  classzk_1_1api__error.js  classzk_1_1authentication__failed-members.html  classzk_1_1authentication__failed.html  classzk_1_1bad__version-members.html  classzk_1_1bad__version.html  classzk_1_1check__failed-members.html  classzk_1_1check__failed.html  classzk_1_1client-members.html  (+281 more)
.github/: ISSUE_TEMPLATE.md
cmake/modules/: BuildFunctions.cmake  CodeCoverage.cmake  ConfigurationSetting.cmake  ListSplit.cmake  ZooKeeper.cmake
config/: dev-env  make-doxygen  make-package  make-packages  publish-doxygen  run-tests  travisci_rsa.enc  upload-coverage
doc/: Doxyfile
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_2.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  classes_e.js  classes_f.js  enums_2.js  enums_3.js  enumvalues_1.js  enumvalues_2.js  enumvalues_5.js  enumvalues_6.js  (+26 more)
src/zk/: acl.cpp  acl.hpp  acl_tests.cpp  buffer.hpp  client.cpp  client.hpp  client_tests.cpp  config.hpp  connection.cpp  connection.hpp  connection_tests.cpp  connection_zk.cpp  connection_zk.hpp  connection_zk_tests.cpp  error.cpp  error.hpp  error_tests.cpp  exceptions.cpp  exceptions.hpp  forwards.hpp  future.hpp  multi.cpp  multi.hpp  multi_tests.cpp  notification.cpp  notification.hpp  op.cpp  op.hpp  optional.hpp  optional_tests.cpp  results.cpp  results.hpp  stat.cpp  stat.hpp  string_view.hpp  types.cpp  types.hpp  types_tests.cpp  watch.cpp  watch.hpp  (+1 more)
version/: index.html
version/0.1.0/: README_8md_source.html  acl_8cpp_source.html  acl_8hpp_source.html  annotated.html  annotated_dup.js  buffer_8hpp.html  buffer_8hpp_source.html  classes.html  classstd_1_1hash_3_01zk_1_1acl__rule_01_4-members.html  classstd_1_1hash_3_01zk_1_1acl__rule_01_4.html  classzk_1_1acl-members.html  classzk_1_1acl.html  classzk_1_1acl__rule-members.html  classzk_1_1acl__rule.html  classzk_1_1acls-members.html  classzk_1_1acls.html  classzk_1_1api__error-members.html  classzk_1_1api__error.html  classzk_1_1authentication__failed-members.html  classzk_1_1authentication__failed.html  classzk_1_1bad__version-members.html  classzk_1_1bad__version.html  classzk_1_1client-members.html  classzk_1_1client.html  classzk_1_1closing-members.html  classzk_1_1closing.html  classzk_1_1connection-members.html  classzk_1_1connection.html  classzk_1_1connection.js  classzk_1_1connection__loss-members.html  classzk_1_1connection__loss.html  classzk_1_1connection__zk-members.html  classzk_1_1connection__zk.html  classzk_1_1create__result-members.html  classzk_1_1create__result.html  classzk_1_1curator_1_1client-members.html  classzk_1_1curator_1_1client.html  classzk_1_1curator_1_1client.js  classzk_1_1data__inconsistency-members.html  classzk_1_1data__inconsistency.html  (+182 more)
version/0.1.1/: README_8md_source.html  acl_8cpp_source.html  acl_8hpp_source.html  annotated.js  buffer_8hpp.html  buffer_8hpp_source.html  classstd_1_1hash_3_01zk_1_1acl__rule_01_4.html  classzk_1_1acl-members.html  classzk_1_1acl.js  classzk_1_1acl__rule.js  classzk_1_1acls-members.html  classzk_1_1api__error-members.html  classzk_1_1api__error.html  classzk_1_1authentication__failed-members.html  classzk_1_1bad__version-members.html  classzk_1_1bad__version.js  classzk_1_1client.html  classzk_1_1client.js  classzk_1_1closing.html  classzk_1_1closing.js  classzk_1_1connection.html  classzk_1_1connection__loss.js  classzk_1_1connection__params-members.html  classzk_1_1connection__params.html  classzk_1_1connection__zk_1_1child__watcher-members.html  classzk_1_1connection__zk_1_1child__watcher.html  classzk_1_1connection__zk_1_1data__watcher-members.html  classzk_1_1connection__zk_1_1data__watcher.html  classzk_1_1connection__zk_1_1exists__watcher-members.html  classzk_1_1connection__zk_1_1watcher-members.html  classzk_1_1connection__zk_1_1watcher.html  classzk_1_1data__inconsistency-members.html  classzk_1_1exists__result-members.html  classzk_1_1exists__result.html  classzk_1_1get__acl__result-members.html  classzk_1_1get__children__result.html  classzk_1_1get__result-members.html  classzk_1_1get__result.html  classzk_1_1invalid__acl-members.html  classzk_1_1invalid__callback-members.html  (+77 more)
version/0.2.0/: annotated.html  buffer_8hpp_source.html  classes.html  classpath_8cpp_source.html  classstd_1_1hash_3_01zk_1_1acl__rule_01_4-members.html  classstd_1_1hash_3_01zk_1_1acl__rule_01_4.js  classzk_1_1authentication__failed-members.html  classzk_1_1check__failed.html  classzk_1_1check__failed.js  classzk_1_1connection-members.html  classzk_1_1connection__params.js  classzk_1_1connection__zk_1_1basic__watcher.html  classzk_1_1connection__zk_1_1watcher.js  classzk_1_1create__result-members.html  classzk_1_1error-members.html  classzk_1_1exists__result.html  classzk_1_1invalid__connection__state.html  classzk_1_1multi__result-members.html  classzk_1_1new__configuration__no__quorum.js  classzk_1_1not__empty.js  (+29 more)
(+277 files in other folders)
